--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -1,7 +1,8 @@
 {
   "inicio": {
     "arcoSup": "NANOTECNOLOGÍA PATENTADA",
-    "arcoInf": "ECOAMIGABLE"
+    "arcoInf": "ECOAMIGABLE",
+    "bienv": "Bienvenid&#64;s"
   },
   "home": {
     "int": "ENVASES INTELIGENTES <br> PARA EL HOGAR",
