--- a/src/assets/locales/zh.json
+++ b/src/assets/locales/zh.json
@@ -1,7 +1,8 @@
 {
   "inicio": {
     "arcoSup": "专利纳米技术",
-    "arcoInf": "环保的"
+    "arcoInf": "环保的",
+    "bienv": "欢迎"
   },
   "home": {
     "int": "智能包装 <br> 可在家使用",
