--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -2,7 +2,7 @@
   "inicio": {
     "arcoSup": "PATENTED NANOTECHNOLOGY",
     "arcoInf": "ECOFRIENDLY",
-    "bienv": "Welcome"
+    "bienv": "WELCOME"
   },
   "home": {
     "int": "INTELLIGENT PACKAGING <br> FOR THE HOME",
