--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -2,7 +2,7 @@
   "inicio": {
     "arcoSup": "NANOTECNOLOGÍA PATENTADA",
     "arcoInf": "ECOAMIGABLE",
-    "bienv": "Bienvenid&#64;s"
+    "bienv": "BIENVENID&#64;"
   },
   "home": {
     "int": "ENVASES INTELIGENTES <br> PARA EL HOGAR",
